# viirs_snpp_daily_gridding

./: .gitignore  README.md  config.json  config.yaml  log.txt  main.py  pyproject.toml  setup.py
S3_Authentication/: authentication.py
process_data/: __init__.py  grid.py  processing_pipeline.py  read_and_process_files.py
viirs_snpp_daily_gridding/: __init__.py
viirs_snpp_daily_gridding.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
viirs_snpp_daily_gridding/export_data/: __init__.py  export.py
viirs_snpp_daily_gridding/logs/: log.py
viirs_snpp_daily_gridding/process_data/: __init__.py  combine_db_dt.py  grid.py  processing_pipeline.py  read_and_process_files.py
viirs_snpp_daily_gridding/s3_authentication/: __init__.py  authentication.py
viirs_snpp_daily_gridding/web_scraping/: __init__.py  web_scraping.py
